# TicTacToe

TicTacToe/: CMakeLists.txt  README
TicTacToe/src/: main.cpp
TicTacToe/src/game/: gamelogic.cpp
TicTacToe/src/headers/config/: constants.h
TicTacToe/src/headers/game/: gamelogic.h  gamestate.h  main.h  player.h
TicTacToe/src/headers/helperfuncs/: helperfuncs.h  initSDL.h
TicTacToe/src/headers/log/: clog.h
TicTacToe/src/headers/menu/: menu.h  menulogic.h
TicTacToe/src/headers/render/: gamerender.h
TicTacToe/src/helperfuncs/: helperfuncs.cpp  initSDL.cpp
TicTacToe/src/log/: clog.cpp
TicTacToe/src/menu/: menulogic.cpp
TicTacToe/src/render/: gamerender.cpp
